@@ -27,7 +27,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -47,6 +46,7 @@ import javax.inject.Inject;
 import javax.naming.ConfigurationException;
 import javax.persistence.EntityExistsException;
 
+import com.cloud.exception.ResourceAllocationException;
 import org.apache.cloudstack.affinity.dao.AffinityGroupVMMapDao;
 import org.apache.cloudstack.annotation.AnnotationService;
 import org.apache.cloudstack.annotation.dao.AnnotationDao;
@@ -1095,7 +1095,13 @@ public class VirtualMachineManagerImpl extends ManagerBase implements VirtualMac
         // check resource count if ResourceCountRunningVMsonly.value() = true
         final Account owner = _entityMgr.findById(Account.class, vm.getAccountId());
         if (VirtualMachine.Type.User.equals(vm.type) && ResourceCountRunningVMsonly.value()) {
-            resourceCountIncrement(owner.getAccountId(),new Long(offering.getCpu()), new Long(offering.getRamSize()));
+            resourceCountIncrement(owner.getAccountId(),Long.valueOf(offering.getCpu()), Long.valueOf(offering.getRamSize()));
+        }
+
+        // Increment the VR resource count if the global setting is set to true
+        // and resource.count.running.vms is also true
+        if (VirtualMachine.Type.DomainRouter.equals(vm.type) && ResourceCountRouters.valueIn(owner.getDomainId())) {
+            incrementVrResourceCount(offering, owner, false);
         }
 
         boolean canRetry = true;
@@ -1402,8 +1408,11 @@ public class VirtualMachineManagerImpl extends ManagerBase implements VirtualMac
         } finally {
             if (startedVm == null) {
                 if (VirtualMachine.Type.User.equals(vm.type) && ResourceCountRunningVMsonly.value()) {
-                    resourceCountDecrement(owner.getAccountId(),new Long(offering.getCpu()), new Long(offering.getRamSize()));
+                    resourceCountDecrement(owner.getAccountId(),Long.valueOf(offering.getCpu()), Long.valueOf(offering.getRamSize()));
                 }
+
+                updateVrCountResourceBy(vm.type, owner.getDomainId(), offering, owner, true);
+
                 if (canRetry) {
                     try {
                         changeState(vm, Event.OperationFailed, null, work, Step.Done);
@@ -1455,15 +1464,131 @@ public class VirtualMachineManagerImpl extends ManagerBase implements VirtualMac
         }
     }
 
+    /**
+     * Counts VR resources for the domain if global setting is true.
+     * If the value is "all", counts all VR resources, otherwise get the difference between
+     * current VR offering and default VR offering.
+     *
+     * @param offering VR service offering
+     * @param defaultRouterOffering default VR service offering
+     * @param owner account
+     * @return a Pair of CPU and RAM
+     */
+    public Pair<Long, Long> resolveCpuAndMemoryCount(ServiceOffering offering, ServiceOffering defaultRouterOffering, Account owner) {
+        Integer cpuCount = 0;
+        Integer memoryCount = 0;
+        if (COUNT_ALL_VR_RESOURCES.equalsIgnoreCase(ResourceCountRoutersType.valueIn(owner.getDomainId()))) {
+            cpuCount = offering.getCpu();
+            memoryCount = offering.getRamSize();
+        } else if (COUNT_DELTA_VR_RESOURCES.equalsIgnoreCase(ResourceCountRoutersType.valueIn(owner.getDomainId()))) {
+            // Default offering value can be greater than current offering value
+            if (offering.getCpu() >= defaultRouterOffering.getCpu()) {
+                cpuCount = offering.getCpu() - defaultRouterOffering.getCpu();
+            }
+            if (offering.getRamSize() >= defaultRouterOffering.getRamSize()) {
+                memoryCount = offering.getRamSize() - defaultRouterOffering.getRamSize();
+            }
+        }
+
+        return Pair.of(cpuCount.longValue(), memoryCount.longValue());
+    }
+
+    private void validateResourceCount(Pair<Long, Long> cpuMemoryCount, Account owner) {
+        final Long cpuCount = cpuMemoryCount.first();
+        final Long memoryCount = cpuMemoryCount.second();
+        try {
+            if (cpuCount > 0) {
+                _resourceLimitMgr.checkResourceLimit(owner, ResourceType.cpu, cpuCount);
+            }
+            if (memoryCount > 0) {
+                _resourceLimitMgr.checkResourceLimit(owner, ResourceType.memory, memoryCount);
+            }
+        } catch (ResourceAllocationException ex) {
+            throw new CloudRuntimeException(String.format("Unable to deploy/start routers due to %s.", ex.getMessage()));
+        }
+    }
+
+    /**
+     * Checks if resource count can be allocated to the account/domain.
+     *
+     * @param cpuMemoryCount a Pair of cpu and ram
+     * @param owner the account
+     */
+    public void calculateResourceCount(Pair<Long, Long> cpuMemoryCount, Account owner, boolean isIncrement) {
+        validateResourceCount(cpuMemoryCount, owner);
+        final Long cpuCount = cpuMemoryCount.first();
+        final Long memoryCount = cpuMemoryCount.second();
+
+        // Increment the resource count
+        if (s_logger.isDebugEnabled()) {
+            if (isIncrement) {
+                s_logger.debug(String.format("Incrementing the CPU count with value %s and RAM value with %s.", cpuCount, memoryCount));
+            } else {
+                s_logger.debug(String.format("Decrementing CPU resource count with value %s and memory resource with value %s.",cpuCount, memoryCount));
+            }
+        }
+
+        if(isIncrement) {
+            _resourceLimitMgr.incrementResourceCount(owner.getAccountId(), ResourceType.cpu, cpuCount);
+            _resourceLimitMgr.incrementResourceCount(owner.getAccountId(), ResourceType.memory, memoryCount);
+        } else {
+            _resourceLimitMgr.decrementResourceCount(owner.getAccountId(), ResourceType.cpu, cpuCount);
+            _resourceLimitMgr.decrementResourceCount(owner.getAccountId(), ResourceType.memory, memoryCount);
+        }
+    }
+
+    /**
+     * Increments the VR resource count.
+     * If the global setting resource.count.router is true then the VR
+     * resource count will be considered as well.
+     * If the global setting resource.count.router.type is "all" then
+     * the total VR resource count will be considered, otherwise the difference between
+     * the current VR service offering and the default offering will
+     * be considered.
+     * During router deployment/destroy, we increment the resource
+     * count only if resource.count.running.vms is false, otherwise
+     * we increment it during VR start/stop. Same applies for
+     * decrementing resource count.
+     *
+     * @param offering VR service offering
+     * @param owner account
+     * @param isDeployOrDestroy true if router is being deployed/destroyed
+     */
+    @Override
+    public void incrementVrResourceCount(ServiceOffering offering, Account owner, boolean isDeployOrDestroy) {
+        if (isDeployOrDestroy == Boolean.TRUE.equals(ResourceCountRunningVMsonly.value())) {
+            return;
+        } //
+
+        final ServiceOffering defaultRouterOffering = _resourceLimitMgr.getServiceOfferingByConfig();
+        final Pair<Long, Long> cpuMemoryCount = resolveCpuAndMemoryCount(offering, defaultRouterOffering, owner);
+        calculateResourceCount(cpuMemoryCount, owner, true);
+    }
+
+    /**
+     * Decrements the VR resource count.
+     *
+     * @param offering the service offering of the VR
+     * @param owner the account of the VR
+     * @param isDeployOrDestroy true if the VR is being deployed or destroyed, false if the VR is being started or stopped
+     */
+    @Override
+    public void decrementVrResourceCount(ServiceOffering offering, Account owner, boolean isDeployOrDestroy) {
+        if (isDeployOrDestroy == Boolean.TRUE.equals(ResourceCountRunningVMsonly.value())) {
+            return;
+        }
+
+        final ServiceOffering defaultRouterOffering = _resourceLimitMgr.getServiceOfferingByConfig();
+        final Pair<Long, Long> cpuMemoryCount = resolveCpuAndMemoryCount(offering, defaultRouterOffering, owner);
+        calculateResourceCount(cpuMemoryCount, owner, false);
+    }
+
     private void resetVmNicsDeviceId(Long vmId) {
         final List<NicVO> nics = _nicsDao.listByVmId(vmId);
-        Collections.sort(nics, new Comparator<NicVO>() {
-            @Override
-            public int compare(NicVO nic1, NicVO nic2) {
-                Long nicDevId1 = Long.valueOf(nic1.getDeviceId());
-                Long nicDevId2 = Long.valueOf(nic2.getDeviceId());
-                return nicDevId1.compareTo(nicDevId2);
-            }
+        nics.sort((nic1, nic2) -> {
+            Long nicDevId1 = (long) nic1.getDeviceId();
+            Long nicDevId2 = (long) nic2.getDeviceId();
+            return nicDevId1.compareTo(nicDevId2);
         });
         int deviceId = 0;
         for (final NicVO nic : nics) {
@@ -2151,10 +2276,13 @@ public class VirtualMachineManagerImpl extends ManagerBase implements VirtualMac
 
             boolean result = stateTransitTo(vm, Event.OperationSucceeded, null);
             if (result) {
+                ServiceOfferingVO offering = _offeringDao.findById(vm.getId(), vm.getServiceOfferingId());
                 if (VirtualMachine.Type.User.equals(vm.type) && ResourceCountRunningVMsonly.value()) {
-                    ServiceOfferingVO offering = _offeringDao.findById(vm.getId(), vm.getServiceOfferingId());
-                    resourceCountDecrement(vm.getAccountId(),new Long(offering.getCpu()), new Long(offering.getRamSize()));
+                    resourceCountDecrement(vm.getAccountId(),Long.valueOf(offering.getCpu()), Long.valueOf(offering.getRamSize()));
                 }
+
+                final Account owner = _entityMgr.findById(Account.class, vm.getAccountId());
+                updateVrCountResourceBy(vm.type, vm.getDomainId(), offering, owner, true);
             } else {
                 throw new CloudRuntimeException("unable to stop " + vm);
             }
@@ -2162,6 +2290,16 @@ public class VirtualMachineManagerImpl extends ManagerBase implements VirtualMac
             String message = String.format("Unable to stop %s due to [%s].", vm.toString(), e.getMessage());
             s_logger.warn(message, e);
             throw new CloudRuntimeException(message, e);
+        }
+    }
+
+    private void updateVrCountResourceBy(VirtualMachine.Type type, long domainId, ServiceOffering offering, Account owner, boolean decrement) {
+        if (VirtualMachine.Type.DomainRouter.equals(type) && Boolean.TRUE.equals(ResourceCountRouters.valueIn(domainId))) {
+            if (decrement) {
+                decrementVrResourceCount(offering, owner, true);
+            } else {
+                incrementVrResourceCount(offering, owner, true);
+            }
         }
     }
 
@@ -3536,13 +3674,10 @@ public class VirtualMachineManagerImpl extends ManagerBase implements VirtualMac
         final VMInstanceVO vm = _vmDao.findById(vmId);
         final VirtualMachineProfile profile = new VirtualMachineProfileImpl(vm);
         final List<NicVO> nics = _nicsDao.listByVmId(profile.getId());
-        Collections.sort(nics, new Comparator<NicVO>() {
-            @Override
-            public int compare(NicVO nic1, NicVO nic2) {
-                Long nicId1 = Long.valueOf(nic1.getDeviceId());
-                Long nicId2 = Long.valueOf(nic2.getDeviceId());
-                return nicId1.compareTo(nicId2);
-            }
+        nics.sort((nic1, nic2) -> {
+            Long nicDevId1 = (long) nic1.getDeviceId();
+            Long nicDevId2 = (long) nic2.getDeviceId();
+            return nicDevId1.compareTo(nicDevId2);
         });
 
         for (final NicVO nic : nics) {
@@ -4672,7 +4807,7 @@ public class VirtualMachineManagerImpl extends ManagerBase implements VirtualMac
                 VmOpLockStateRetry, VmOpWaitInterval, ExecuteInSequence, VmJobCheckInterval, VmJobTimeout, VmJobStateReportInterval,
                 VmConfigDriveLabel, VmConfigDriveOnPrimaryPool, VmConfigDriveForceHostCacheUse, VmConfigDriveUseHostCacheOnUnsupportedPool,
                 HaVmRestartHostUp, ResourceCountRunningVMsonly, AllowExposeHypervisorHostname, AllowExposeHypervisorHostnameAccountLevel, SystemVmRootDiskSize,
-                AllowExposeDomainInMetadata
+                AllowExposeDomainInMetadata, ResourceCountRouters, ResourceCountRoutersType
         };
     }
 
